# create-starpack

./: .gitignore  CMakeLists.txt  README.md
include/: create-starpack.hpp
src/: create-starpack.cpp
